namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-gateway
  labels:
    name: istio-gateway
