ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: istio-system
  name: istio-public-ingress
spec:
  backend:
    serviceName: istio-public-ingressgateway
    servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: istio-system
  name: istio-private-ingress
spec:
  backend:
    serviceName: istio-private-ingressgateway
    servicePort: 80
